--- a/main.html
+++ b/main.html
@@ -8,6 +8,83 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment 3</h1>
+
+	<table id="table-1" class="middle">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr class="center">
+			<td id="t21">left</td>
+			<td id="t22">center</td>
+			<td id="t23" class="right">right</td>
+		</tr>
+		<tr>
+			<td id="t31">left</td>
+			<td id="t32" >center</td>
+			<td id="t33" class="right">right</td>
+		</tr>
+	</table>
+	<br>
+	<table id="table-2" class="middle">
+		<tr><!-- 1st row -->
+			<td colspan="6"></td>
+		</tr>
+
+		<tr><!-- 2nd row -->
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr><!-- 3rd row -->
+			
+			<td></td>
+			
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+
+		<tr><!-- 4th row -->
+			
+			<td></td>
+			<td></td>
+			
+		</tr>
+
+		<tr><!-- 5th row -->
+			
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr><!-- 6th row -->
+			<td colspan="6"></td>
+			
+		</tr>
+		
+	</table>
+	<br>
+	<table id="table-3" class="middle">
+		<tr> <!-- 1st row -->
+			<td style="background-color: green;"></td>
+		</tr>
+		<tr> <!-- 2nd row -->
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+		</tr>
+		<tr> <!-- 3rd row -->
+			<td style="background-color: blue;"></td>
+		</tr>
+	</table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
