--- a/main.html
+++ b/main.html
@@ -13,17 +13,17 @@
 	<table id="table-1" class="middle">
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
 		<tr class="center">
 			<td id="t21">left</td>
-			<td id="t22">center</td>
+			<td id="t22" class="center">center</td>
 			<td id="t23" class="right">right</td>
 		</tr>
 		<tr>
 			<td id="t31">left</td>
-			<td id="t32" >center</td>
+			<td id="t32" class="center">center</td>
 			<td id="t33" class="right">right</td>
 		</tr>
 	</table>
