--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 
 	<table id="table-1" class="middle">
 		<tr>
-			<td id="t11">left</td>
+			<td id="t11" class="left">left</td>
 			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
 		<tr class="center">
-			<td id="t21">left</td>
-			<td id="t22" class="center">center</td>
-			<td id="t23" class="right">right</td>
+			<td id="t14" class="left">left</td>
+			<td id="t15" class="center">center</td>
+			<td id="t16" class="right">right</td>
 		</tr>
 		<tr>
-			<td id="t31">left</td>
-			<td id="t32" class="center">center</td>
-			<td id="t33" class="right">right</td>
+			<td id="t17" class="left">left</td>
+			<td id="t18" class="center">center</td>
+			<td id="t19" class="right">right</td>
 		</tr>
 	</table>
 	<br>
@@ -73,15 +73,18 @@
 		
 	</table>
 	<br>
+	
 	<table id="table-3" class="middle">
 		<tr> <!-- 1st row -->
-			<td style="background-color: green;"></td>
+			<td style="background-color: green;" colspan="3"></td>
 		</tr>
 		<tr> <!-- 2nd row -->
-			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td></td>
+			<td id="t-image"><img id="img" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td></td>
 		</tr>
 		<tr> <!-- 3rd row -->
-			<td style="background-color: blue;"></td>
+			<td style="background-color: blue;" colspan="3"></td>
 		</tr>
 	</table>
 	
