--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 	<br>
 	<table id="table-2" class="middle">
 		<tr><!-- 1st row -->
-			<td colspan="6"></td>
+			<td colspan="6" id="t21"></td>
 		</tr>
 
 		<tr><!-- 2nd row -->
